--- a/Web_Quiz/templates/home.html
+++ b/Web_Quiz/templates/home.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to the Quiz</title>
-    <link rel="stylesheet" href="css/home.css" type="text/css">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body>
-    <h1>Welcome to the Quiz!</h1>
-    <a href="{{ url_for('quiz') }}">Start Quiz</a>
+    <div class="hero">
+        <h1>Welcome Movie Mayhem!</h1>
+            <nav>
+                <ul>
+                    <li><a href="{{ url_for('quiz') }}">Start Quiz</a></li>
+                    <li><a href="login.html">Login</a></li>
+                    <li><a href="sign.html">Sign Up</a></li>
+                </ul>
+            </nav>
+    </div>       
 </body>
 </html>
