--- a/Web_Quiz/templates/css/main.css
+++ b/Web_Quiz/templates/css/main.css
@@ -6,11 +6,7 @@ body{
    background-position: center;
    background-repeat: no-repeat;
 }
-nav ul{
-   list-style-type: none;
-   padding: 0%;
-}
-nav li{
-   display: block;
-   color: azure;
+
+body{
+   background-color: aqua;
 }
