--- a/Web_Quiz/templates/home.html
+++ b/Web_Quiz/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to the Quiz</title>
-    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="../templates/css/main.css" type="text/css">
 </head>
 <body>
     <div class="hero">
