--- a/Web_Quiz/templates/quiz.html
+++ b/Web_Quiz/templates/quiz.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Quiz</title>
+    <link rel="stylesheet" href="css/quiz.css">
 </head>
 <body>
     <h2>{{ question }}</h2>
