--- a/Web_Quiz/static/css/success.css
+++ b/Web_Quiz/static/css/success.css
@@ -1,25 +1,22 @@
 *{
     margin: 0;
-    box-sizing: border-box;
-    box-sizing: border-box;
     padding: 0;
-    outline: none;
+    box-sizing:border-box;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 body {
-    min-height: 100vh;
-    width: 100%;
-    background-color: #000;
-    background-image: url('/static/img/play.gif');
-    background-position: center;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-image: url('/static/img/bluescreen.gif');
+    background-size: cover;
     background-repeat: no-repeat;
-    background-size: fixed ;
-    color: #fff;
-    padding: 0 8%;
 }
 
-input {
+nav button{
     background: none;
     outline: none;
     border: none;
@@ -29,10 +26,16 @@ input {
     align-items: center;
 }
 
-button {
+
+nav button{
+    color: black;
+    text-decoration: none;
+}
+
+.button {
     appearance: auto;
     font-size: 1rem;
-    font-weight: 200;
+    font-weight: 300;
     padding: 14px 70px;
     color: white;
     background-color: var(--clr-rgba);
@@ -43,7 +46,7 @@ button {
     transition: all 0.3s;
 }
 
-button:hover {
+.button:hover {
     transform: translateY(-10px);
     background-color: var(--clr-rgba);
     color: var(--clr-rgba);
