--- a/Web_Quiz/templates/login.html
+++ b/Web_Quiz/templates/login.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home Page</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}" type="text/css">
     </head>
     <body>
-            <form action="/login" method="POST">
+        <div class="glass-container">
+            <div class="login-box">
                 <h2>Please login:</h2>
-                <div>
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
-                </div>
-                <div>
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <div>
-                    <input type="submit" value="Login">
-                </div>
-            </form>
+                <form action="/login" method="POST">
+                    <div>
+                        <label for="username">Username:</label>
+                        <input type="text" id="username" name="username" required>
+                    </div>
+                    <div>
+                        <label for="password">Password:</label>
+                        <input type="password" id="password" name="password" required>
+                    </div>
+                    <div>
+                        <button type="submit">Login</button>            
+                    </div>
+                </form>
+                <p style="color: red;">{{ error }}</p>
+            </div>
+        </div>
     </body>
 </html>
