--- a/Web_Quiz/templates/success.html
+++ b/Web_Quiz/templates/success.html
@@ -2,10 +2,14 @@
 <html lang="en">
     <head>
         <title>Success</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/success.css') }}" type="text/css">
     </head>
     <body>
-        <h2>
-            User {{username}} logged in successfully.
-        </h2>
+        <h2>User {{username}} logged in successfully</h2>
+            <div class="blue-img"> 
+            </div>
+                <nav>
+                    <button><li><a href="{{ url_for('quiz') }}" class="button">Start Quiz</a></li></button>
+                </nav>
     </body>
 </html>
