--- a/Web_Quiz/templates/home.html
+++ b/Web_Quiz/templates/home.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul>
                     <button><li><a href="{{ url_for('login') }}" class="button">Start Quiz</a></li></button>
-                    <button><li><a href="{{ url_for('quiz', guest=True ) }}" class="button">Guest</a></li></button>
+                    <button><li><a href="{{ url_for('quiz', restart='true' ) }}" class="button">Guest</a></li></button>
                 </ul>
             </nav>
     </div>       
