--- a/Web_Quiz/templates/result.html
+++ b/Web_Quiz/templates/result.html
@@ -16,7 +16,7 @@
         <form method="POST">
             <label for="username">Enter your name for the leaderboard:</label>
             <input type="text" name="username" id="username" required>
-            <button type="submit">Submit</button>
+            <button type="submit" class="button">Submit</button> 
         </form>
     
         <br>
