--- a/Web_Quiz/templates/home.html
+++ b/Web_Quiz/templates/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="hero">
-        <h1>Welcome to Movie Mayhem!</h1>
+        <h1>Welcome to Movie <br>Mayhem!</h1>
         <div class="static-img"> 
         </div>
             <nav>
